# ftp_download

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: docs.yml  python-package.yml  tests-unix.yml  tests-windows.yml  tests.yaml  tests.yml
docs/: ftp_download.html  index.html  search.js
docs/ftp_download/: ensure.html  prefs.html  timings.html
src/collectutils/: __main__.py  ensure.py  prefs.py  timings.py
src/config/: prefs.py
src/ftp_download/: __init__.py  __main__.py  ensure.py  handle_error.py  prefs.py  timings.py
src/ftp_download/html/collectutils/: index.html  main.html
src/utils/: handle_error.py  timings.py
tests/: test_ensure.py  test_main.py  test_prefs.py
