[metadata]
name = ftp_download
version = 1.0
author = Vitor Ferreira Lins
author_email = vflins@live.com
description = Your description of the project
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
platforms = 
url = https://github.com/VFLins/ftp_download
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Intended Audience :: 

[options]
packages = find:
python_requires = >=3.6
package_dir = 
    =src

[options.packages.find]
include = ftp_download

[options.extras_require]
testing =
    flake8>=7.0.0
    pytest>=7.4.4
    pytest-cov>=4.1.0
    tox>=4.12.0
    mypy>=1.8.0

[options.package_data]
ftp_download = py.typed
